--- a/.github/workflows/Web.yml
+++ b/.github/workflows/Web.yml
@@ -27,7 +27,7 @@ jobs:
           haxelib install flixel-ui 2.5.0 --quiet
           haxelib install flixel-addons 3.1.1 --quiet
           haxelib install tjson --quiet
-          haxelib git hxCodec https://github.com/Ant643/hxCodec- 2.6.1 --quiet
+          haxelib git hxCodec https://github.com/Ant643/hxCodec- hxcodecmariomadnessv2 --quiet
           haxelib git luajit https://github.com/nebulazorua/linc_luajit --quiet
           haxelib install hscript 2.4.0 --quiet
           haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex --quiet
