--- a/.github/workflows/Web.yml
+++ b/.github/workflows/Web.yml
@@ -30,8 +30,27 @@ jobs:
       - name: Install Libraries
         run: |
           haxelib setup ~/haxelib
-          haxelib install hmm --quiet
-          haxelib run hmm install --quiet
+          haxelib install lime
+          haxelib install openfl
+          haxelib --never install flixel
+          haxelib run lime setup flixel
+          haxelib run lime setup
+          haxelib install flixel-tools
+          haxelib install flixel-ui
+          haxelib install flixel-addons
+          haxelib install tjson
+          haxelib install hxjsonast
+          haxelib install hxCodec
+          haxelib git linc_luajit https://github.com/nebulazorua/linc_luajit
+          haxelib install hscript
+          haxelib git hscript-ex https://github.com/ianharrigan/hscript-ex
+          haxelib git discord_rpc https://github.com/Aidan63/linc_discord-rpc
+          haxelib install hxcpp-debug-server
+          haxelib set flixel-addons 3.1.1
+          haxelib set flixel 5.3.1
+          haxelib set flixel-ui 2.5.0
+          haxelib set flixel-tools 1.5.1
+          haxelib set hxCodec 2.6.1
 
       - name: Configure Android
         run: |
